# quadruped

./: .gitignore  .gitmodules  Astra.stl  Belt_1.stl  Bridge_1.stl  Inner_Shoulder.stl  Lower_Leg_1.stl  Lower_Leg_4_1.stl  MID-360_4_1.stl  MID_360_4_3.stl  Outer_Shoulder_Plate.stl  README.md  Servo_Cover_2.stl  Upper_Leg_1.stl  Upper_Pulley.stl  Upper_Pulley_1.stl  head.stl  pyproject.toml  top.stl
docs/references/: ars.py
rl/: eval_ars.py  mjx_env.py  train_ars.py  utils.py
ros2_ws/src/: COLCON_IGNORE
ros2_ws/src/open_quadruped_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/open_quadruped_control/open_quadruped_control/: __init__.py
ros2_ws/src/open_quadruped_control/open_quadruped_control/nodes/: interface_process.py
ros2_ws/src/open_quadruped_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/open_quadruped_nav/: package.xml  setup.py
ros2_ws/src/open_quadruped_nav/launch/: slam_lidar.launch.py  slam_rgbd.launch.py
ros2_ws/src/open_quadruped_nav/open_quadruped_nav/: __init__.py
ros2_ws/src/open_quadruped_sensors/: README.md  package.xml  setup.py
ros2_ws/src/open_quadruped_sensors/launch/: livox_mid360.launch.py  orbbec_astra.launch.py
ros2_ws/src/open_quadruped_sensors/resource/: open_quadruped_sensors
ros2_ws/src/open_quadruped_sim_mjx/: package.xml  setup.cfg  setup.py
ros2_ws/src/open_quadruped_sim_mjx/config/: actuator_mapping_example.yaml
ros2_ws/src/open_quadruped_sim_mjx/launch/: all_sim.launch.py  mjx_sim.launch.py  mujoco_cameras.launch.py  mujoco_lidar.launch.py
ros2_ws/src/open_quadruped_sim_mjx/open_quadruped_sim_mjx/: __init__.py
ros2_ws/src/open_quadruped_sim_mjx/open_quadruped_sim_mjx/assets/: Quardred_08272115_minimum.xml  quadruped.xml  spot_urdf
ros2_ws/src/open_quadruped_sim_mjx/open_quadruped_sim_mjx/assets/meshes/: Belt.stl  Belt_12.stl  Bottom_Cover.stl  Bridge_13.stl  Chassis_Left_Side_13.stl  Foot3.stl  Foot_12.stl  Inner_Shoulder_1.stl  Left_Hip_Joint.stl  Lower_Leg_134.stl  MID86.stl  MID_360_4_2.stl  Outer_Shoulder_Plate_1.stl  Rear_Cover.stl  Right_Hip_Joint.stl  Servo_1.stl  Servo_3_3.stl  Servo_Cover_13.stl  Upper_Leg.stl  Upper_Pulley_12.stl  Upper_Pulley_2.stl  astra_clip1.stl  astra_clip2.stl
ros2_ws/src/open_quadruped_sim_mjx/open_quadruped_sim_mjx/nodes/: mjx_sim.py  mujoco_camera_publisher.py  mujoco_lidar_publisher.py
scripts/: mjcf_validate.py
