<?xml version="1.0"?>
<package format="3">
  <name>open_quadruped_control</name>
  <version>0.1.0</version>
  <description>ROS 2 control nodes for OpenQuadruped (rclpy port)</description>
  <maintainer email="you@example.com">OpenQuadruped Maintainer</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>open_quadruped_interfaces</depend>
  <exec_depend>python3-numpy</exec_depend>
</package>
