<?xml version="1.0"?>
<package format="3">
  <name>open_quadruped_sensors</name>
  <version>0.0.1</version>
  <description>Hardware sensor integration for OpenQuadruped (Livox MID-360, Orbbec Astra)</description>
  <maintainer email="seoneum@users.noreply.github.com">seoneum</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
</package>
